--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.java.properties.hibernate.hbm2ddl.auto=create
+spring.datasource.url=jdbc:h2:file:./database/dataBase1
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.datasource.username=sa
+spring.datasource.password=password
