Baza danych działa

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,21 @@
 	</properties>
 	<dependencies>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>                <!-- for tomcat web container-->
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>              <!--fot jap compilation need provide scope runtime or provided because it available in tomcat -->
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>runtime</scope>     <!-- in my case provided not working so write runtime-->
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>           <!-- for jsp jstl tags-->
+			<artifactId>jstl</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
