--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>                <!-- for tomcat web container-->
